--- a/pom.xml
+++ b/pom.xml
@@ -28,13 +28,23 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+		<spring.statemachine.version>4.0.1</spring.statemachine.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.statemachine</groupId>
+			<artifactId>spring-statemachine-core</artifactId>
+			<version>${spring.statemachine.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.statemachine</groupId>
+			<artifactId>spring-statemachine-data-common</artifactId>
+			<version>${spring.statemachine.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
